Creato con Colab

--- a/labs/01_Tensor_basics.ipynb
+++ b/labs/01_Tensor_basics.ipynb
@@ -8,8 +8,7 @@
         "i51GvUnwSc0U"
       ],
       "toc_visible": true,
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/DarkJ2/DeepLearning/blob/main/labs/01_Tensor_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -229,14 +218,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SWHsmm2OTqZK"
+        "id": "SWHsmm2OTqZK",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "284ea89e-17e2-489e-cbad-5b1b56c7451b"
       },
       "source": [
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.6.0+cu124'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -277,59 +285,142 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F-i2-H7QU7DH"
+        "id": "F-i2-H7QU7DH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87dc15bd-9b46-4a58-a15b-3893d581fcc8"
       },
       "source": [
         "# Basic tensor creation from python lists\n",
         "torch.tensor([[1, 2, 3], [4, 5, 6]], dtype=torch.int32)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [4, 5, 6]], dtype=torch.int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5LNGnqk3VbkU"
+        "id": "5LNGnqk3VbkU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b7e703b8-2423-402e-83e1-8172e1138e34"
       },
       "source": [
         "# Some other tensor construction methods\n",
         "torch.zeros((3,5))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8et3bE93WLBR"
+        "id": "8et3bE93WLBR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da722bfa-2b4b-4405-967c-8252d36e9483"
       },
       "source": [
         "torch.ones((2,5), dtype=torch.float64)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.]], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v2Ehsm4WcML0"
+        "id": "v2Ehsm4WcML0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46807525-ebfe-4d50-bb39-bc48fd1c5e49"
       },
       "source": [
         "torch.eye(4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 0., 0., 0.],\n",
+              "        [0., 1., 0., 0.],\n",
+              "        [0., 0., 1., 0.],\n",
+              "        [0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jokiBKanWFIE"
+        "id": "jokiBKanWFIE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ebbc2a68-3689-4a47-dc7d-8e1b07f812fa"
       },
       "source": [
         "torch.rand((2,2))  # from which distribution are these random numbers sampled? Check the PyTorch documentation"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.9483, 0.2461],\n",
+              "        [0.2843, 0.6876]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -343,25 +434,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DHV8h3LVWRaI"
+        "id": "DHV8h3LVWRaI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1cb62c6e-3d4e-454a-c226-5f9c97efb8bf"
       },
       "source": [
         "torch.randint(0, 100, (3,3))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[85,  7, 72],\n",
+              "        [40, 14,  7],\n",
+              "        [49, 16, 74]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zsf9dn4CWl2V"
+        "id": "zsf9dn4CWl2V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9e1c4df-41d0-4810-db4d-79f73cdd0ce2"
       },
       "source": [
         "t = torch.rand((3, 3))\n",
         "torch.ones_like(t)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1.],\n",
+              "        [1., 1., 1.],\n",
+              "        [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -375,26 +500,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aI5VsGZJd2rV"
+        "id": "aI5VsGZJd2rV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a551cce-c72a-434a-862c-2b4ee54c4240"
       },
       "source": [
         "t = torch.rand((3, 3), dtype=torch.float32)\n",
         "t.numpy()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.56876606, 0.45590544, 0.61141056],\n",
+              "       [0.47132266, 0.89943457, 0.96057796],\n",
+              "       [0.35535276, 0.43039095, 0.9437869 ]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wt4Uy9Bbd81h"
+        "id": "Wt4Uy9Bbd81h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b285082-c2f4-41c0-e6f4-d633f5da0266"
       },
       "source": [
         "n = np.random.rand(3,3).astype(np.float16)\n",
         "torch.from_numpy(n)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.8745, 0.0818, 0.1464],\n",
+              "        [0.8062, 0.7026, 0.6655],\n",
+              "        [0.5908, 0.4124, 0.0424]], dtype=torch.float16)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -427,19 +586,39 @@
     {
       "cell_type": "code",
       "source": [
-        "# 📝 write your solution in this cell"
+        "# 📝 write your solution in this cell\n",
+        "t=torch.ones((3,3)) +torch.eye(3)\n",
+        "print(t)"
       ],
       "metadata": {
-        "id": "pAnntNcu9otu"
+        "id": "pAnntNcu9otu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b9085e6-48f7-442d-96d8-fa25eb959575"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[2., 1., 1.],\n",
+            "        [1., 2., 1.],\n",
+            "        [1., 1., 2.]])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "A2tjmfWbYk9P",
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7c0887ba-112d-4f96-cd64-da8c9a34bf31"
       },
       "source": [
         "# @title 👀 Solution\n",
@@ -447,8 +626,21 @@
         "\n",
         "torch.ones((3,3)) + torch.eye(3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[2., 1., 1.],\n",
+              "        [1., 2., 1.],\n",
+              "        [1., 1., 2.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -471,14 +663,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XP4CyRTmXYpd"
+        "id": "XP4CyRTmXYpd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a06cb68-c014-4b36-eecd-f932beef754a"
       },
       "source": [
         "t = torch.rand((3, 3))\n",
         "t.dtype"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -493,14 +700,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PjuSpqbvXbqs"
+        "id": "PjuSpqbvXbqs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b6e2003a-6f05-43f0-d6c9-13069f9b1d75"
       },
       "source": [
         "t = torch.rand((3,5))\n",
         "t.shape"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -514,14 +736,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_4okES1zXcy2"
+        "id": "_4okES1zXcy2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "950543d9-203d-4483-8a94-18ee0789fbf2"
       },
       "source": [
         "t = torch.rand((3,5))\n",
         "t.device"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cpu')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -537,17 +774,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_GJinHgLzs11"
+        "id": "_GJinHgLzs11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2cd1e86a-454c-45da-862c-6e771f8be150"
       },
       "source": [
         "# Exercise variables\n",
         "X = torch.rand(100,42)\n",
-        "\n",
         "# Your solution:\n",
-        "# Y = ?"
+        "Y=torch.ones(X.shape[0],3)\n",
+        "print(Y.shape)\n",
+        "#print(Y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([100, 3])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
