Creato con Colab

--- a/labs/01_Tensor_basics.ipynb
+++ b/labs/01_Tensor_basics.ipynb
@@ -7,14 +7,12 @@
       "collapsed_sections": [
         "i51GvUnwSc0U"
       ],
-      "toc_visible": true,
-      "gpuType": "T4"
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -198,7 +196,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -223,13 +221,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "284ea89e-17e2-489e-cbad-5b1b56c7451b"
+        "outputId": "e146ddc1-1844-46fe-a36d-f8d95ec94050"
       },
       "source": [
         "import torch\n",
         "torch.__version__"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +240,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -850,58 +848,128 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbIogawQYBvW"
+        "id": "gbIogawQYBvW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "102c91af-3ac6-4fd4-85c6-af124ac415cb"
       },
       "source": [
         "# Check if the GPU is available\n",
         "torch.cuda.is_available()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TVYbgoigX_PL"
+        "id": "TVYbgoigX_PL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6ab6b09e-4b41-4885-fe8b-3620590a1a71"
       },
       "source": [
         "# If available use the GPU\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "device"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yhHVeolzWZQn"
+        "id": "yhHVeolzWZQn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c099d838-0a4f-443f-9b80-ee07e8b23fe6"
       },
       "source": [
         "t = torch.rand((3,3))\n",
         "t = t.to(device)  # Note that we are assigning back to t, otherwise t won't be updated!\n",
         "t"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.3646, 0.6003, 0.1529],\n",
+              "        [0.8370, 0.6519, 0.4502],\n",
+              "        [0.4546, 0.2506, 0.9868]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Al_WAx4RWDy2"
+        "id": "Al_WAx4RWDy2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f115adb-23f5-4525-c856-2c24296d3f9a"
       },
       "source": [
         "# Construct tensors directly on the GPU memory\n",
         "t = torch.ones((5, 5), device='cuda')\n",
         "t"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nuynABfrVZmD"
+        "id": "nuynABfrVZmD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be994d15-65e2-4d57-ebe3-f9d9e7393cf7"
       },
       "source": [
         "t = torch.rand((3,3))\n",
@@ -912,25 +980,59 @@
         "t = t.cuda()\n",
         "t"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.9166, 0.0901, 0.0389],\n",
+              "        [0.0577, 0.6420, 0.3434],\n",
+              "        [0.5085, 0.2436, 0.8517]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JkOX8icwVXPK"
+        "id": "JkOX8icwVXPK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10b05d45-8ed5-45dc-ae39-ffc5c51ce240"
       },
       "source": [
         "t = t.cpu()\n",
         "t"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.9166, 0.0901, 0.0389],\n",
+              "        [0.0577, 0.6420, 0.3434],\n",
+              "        [0.5085, 0.2436, 0.8517]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mj0gWQ-FgsZ2"
+        "id": "mj0gWQ-FgsZ2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "86442aa8-32fa-4f3d-f3a3-7c37371e1004"
       },
       "source": [
         "# Utility function to print tensors nicely. We will use this all the time.\n",
@@ -955,8 +1057,18 @@
         "t = torch.rand((3,3), dtype=torch.float32)\n",
         "print_arr(t, prefix='My tensor = ')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My tensor = tensor([[0.5827, 0.0580, 0.2943],\n",
+            "        [0.6686, 0.3359, 0.3622],\n",
+            "        [0.1824, 0.8335, 0.1902]]) <shape: torch.Size([3, 3])> <dtype: torch.float32>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -983,32 +1095,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lfSjfJ7bTHlZ"
+        "id": "lfSjfJ7bTHlZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3eb934cd-fdc7-496e-b5cc-36392140554b"
       },
       "source": [
         "t0 = torch.tensor(3, dtype=torch.double)\n",
         "\n",
         "print_arr(t0)  # notice torch.Size in the printed output"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(3., dtype=torch.float64) <shape: torch.Size([])> <dtype: torch.float64>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4O2GLaL0SxHn"
+        "id": "4O2GLaL0SxHn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "404ea20f-07b8-44f5-b6f8-0120f617f0e3"
       },
       "source": [
         "item = t0.item()  # convert the tensor scalar to a python base type\n",
         "item, type(item)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3.0, float)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aPcQfgGbaEqv"
+        "id": "aPcQfgGbaEqv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f859abc9-66cd-4581-d6bd-9f03f5a33d57"
       },
       "source": [
         "# Be careful, a non-scalar tensor cannot be converted with an .item() call\n",
@@ -1017,8 +1160,16 @@
         "except RuntimeError as e:\n",
         "  print('Error:', e)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error: a Tensor with 3 elements cannot be converted to Scalar\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1032,7 +1183,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Twmbub4VSrvt"
+        "id": "Twmbub4VSrvt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60a24911-f0d3-4af4-cb04-9c2a58b3127f"
       },
       "source": [
         "# A rank-1 tensor\n",
@@ -1040,20 +1195,40 @@
         "\n",
         "print_arr(t1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3]) <shape: torch.Size([3])> <dtype: torch.int64>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3LA-5C4kSHXv"
+        "id": "3LA-5C4kSHXv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "effe8be2-55ac-4f5d-fb1e-52648596dcd3"
       },
       "source": [
         "# A rank-1 tensor with a single scalar\n",
         "print_arr(torch.tensor([42]))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([42]) <shape: torch.Size([1])> <dtype: torch.int64>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1069,14 +1244,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7xuBu8bKcbgl"
+        "id": "7xuBu8bKcbgl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ec24025-6b15-4c7d-d4e1-ff3be6c18c61"
       },
       "source": [
         "# A rank-1 tensor with a single element can be converted to a rank-0 tensor\n",
         "torch.tensor([42]).item()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "42"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1103,15 +1293,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wui6OfMFPdnM"
+        "id": "wui6OfMFPdnM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "149fa1ae-4c0a-4f02-de6a-075d2010f4fe"
       },
       "source": [
         "t2 = torch.tensor([[1, 2, 3], [4, 5, 6]])\n",
         "\n",
         "print_arr(t2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1, 2, 3],\n",
+            "        [4, 5, 6]]) <shape: torch.Size([2, 3])> <dtype: torch.int64>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1129,15 +1332,34 @@
         "t2[1, 2].item()"
       ],
       "metadata": {
-        "id": "o6dSV3eWzvm-"
+        "id": "o6dSV3eWzvm-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7d162cb-fa9e-42fe-eb29-345375b72666"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_hBNed-yOmmQ"
+        "id": "_hBNed-yOmmQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1b7718d-041f-4fd2-dc8d-22976eab413d"
       },
       "source": [
         "# To mimick the notion of a column vector from linear algebra, we can use a rank-2 tensor\n",
@@ -1145,13 +1367,27 @@
         "\n",
         "print_arr(t_col)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1],\n",
+            "        [2],\n",
+            "        [3]]) <shape: torch.Size([3, 1])> <dtype: torch.int64>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qad_RigUjEtA"
+        "id": "Qad_RigUjEtA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31e05273-30a6-4464-adfa-f987d3c164b1"
       },
       "source": [
         "# ...and similarly for row vectors\n",
@@ -1159,8 +1395,16 @@
         "\n",
         "print_arr(t_row)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1, 2, 3]]) <shape: torch.Size([1, 3])> <dtype: torch.int64>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1183,7 +1427,7 @@
       "metadata": {
         "id": "sOdxEQFwBpgy"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1198,24 +1442,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hg5bbeCIjuL_"
+        "id": "hg5bbeCIjuL_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba9d359b-fae1-4661-c252-db5f7446111c"
       },
       "source": [
         "print_arr(torch.zeros((2, 3, 4)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[0., 0., 0., 0.],\n",
+            "         [0., 0., 0., 0.],\n",
+            "         [0., 0., 0., 0.]],\n",
+            "\n",
+            "        [[0., 0., 0., 0.],\n",
+            "         [0., 0., 0., 0.],\n",
+            "         [0., 0., 0., 0.]]]) <shape: torch.Size([2, 3, 4])> <dtype: torch.float32>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3O68PwBGOjpe"
+        "id": "3O68PwBGOjpe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49b5656d-4a4f-4f32-cfde-1a677e188405"
       },
       "source": [
         "print_arr(torch.ones((2, 2, 2, 2)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[[1., 1.],\n",
+            "          [1., 1.]],\n",
+            "\n",
+            "         [[1., 1.],\n",
+            "          [1., 1.]]],\n",
+            "\n",
+            "\n",
+            "        [[[1., 1.],\n",
+            "          [1., 1.]],\n",
+            "\n",
+            "         [[1., 1.],\n",
+            "          [1., 1.]]]]) <shape: torch.Size([2, 2, 2, 2])> <dtype: torch.float32>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1235,9 +1520,10 @@
       },
       "source": [
         "# your solution\n",
-        "k = 12"
+        "k = 12\n",
+        "t=torch.diag(torch.arange(k))"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1252,10 +1538,26 @@
       ],
       "metadata": {
         "id": "38L1P8aCCXed",
-        "cellView": "form"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "cb88ddab-0c86-4203-81b6-ad46e6fdb432"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'print_arr' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-c6de68a73fb0>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint_arr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'print_arr' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
